freegeek-extras (1.0.7) UNRELEASED; urgency=low

  [ Vagrant and Martin ]
  * modified printme to have more useful information
  * added dependencies on lshw and libxml-ruby

 -- Vagrant Cascadian <vagrant@freegeek.org>  Tue,  9 Oct 2007 13:55:42 -0700

freegeek-extras (1.0.6) ubuntu; urgency=low

  * run autodetection function earlier to set target
  * pctel-fix: use 4 spaces instead of tabs

 -- Vagrant Cascadian <vagrant@freegeek.org>  Fri, 27 Jul 2007 13:21:33 -0700

freegeek-extras (1.0.5) ubuntu; urgency=low

  * strip the executable bit from cruft in /usr/local
  * fix check if pctel is configured with the appropriate versions

 -- Vagrant Cascadian <vagrant@freegeek.org>  Fri, 27 Jul 2007 12:49:02 -0700

freegeek-extras (1.0.4) ubuntu; urgency=low

  * improved version handling for pctel-fix init script

 -- Vagrant Cascadian <vagrant@freegeek.org>  Fri, 27 Jul 2007 11:49:09 -0700

freegeek-extras (1.0.3) ubuntu; urgency=low

  * added printme, 4reboots, bat_check, and magix

 -- Vagrant Cascadian <vagrant@freegeek.org>  Tue, 24 Jul 2007 13:32:23 -0700 

freegeek-extras (1.0.2) ubuntu; urgency=low

  * split out pctel stuff into freegeek-pctel package
  * change freekbox3 to freekbox in basiccheck
  * don't hard-code pctel version in pctel-fix init script 

 -- Vagrant Cascadian <vagrant@freegeek.org>  Sat, 21 Jul 2007 12:58:51 -0700

freegeek-extras (1.0.1) ubuntu; urgency=low

  [Martin Chase]
  * fixed pctel-fix

  [Vagrant Cascadian]
  * switch to native revisions
  * add freegeek-archive-keyring to dependencies
  * remove crufty useless comments from debian/rules
  * removed unnecessary files from debian dir
  * add apt repositories for freegeek packages
  * depend on debhelper 5.0.0
  * update to standards version 3.7.2, no changes needed(we hope).
  * updated FSF address
  * properly handle runlevel scripts 

 -- Vagrant Cascadian <vagrant@freegeek.org>  Fri, 20 Jul 2007 11:01:08 -0700

freegeek-extras (1.0-0) unstable; urgency=low
