@@ -4,7 +4,11 @@ freegeek-extras (1.0.7) UNRELEASED; urgency=low
   * modified printme to have more useful information
   * added dependencies on lshw and libxml-ruby
 
- -- Vagrant Cascadian <vagrant@freegeek.org>  Tue,  9 Oct 2007 13:55:42 -0700
+  [ Martin Chase ]
+  * added basiccheck of installer choices
+  * cleaned out some unused basicchecks
+
+ -- Martin Chase <mchase@freegeek.org>  Tue,  9 Oct 2007 16:23:06 -0700
 
 freegeek-extras (1.0.6) ubuntu; urgency=low
 
